src/main/java/com/example/nbd/exceptions/invalidParametersExceptions/UnknownUserTypeException.java
package com.example.nbd.exceptions.invalidParametersExceptions;

public class UnknownUserTypeException extends InvalidParametersException {

    public UnknownUserTypeException () {
        super("Unknown user type");
    }
}
